--- a/templates/index.html
+++ b/templates/index.html
@@ -105,8 +105,7 @@
 <script src="../static/js/map/world.js"></script>
 <script src="../static/js/map/china.js"></script>
 
-
-{#<script src="../static/js/echarts.min.js"></script>#}
+<script src="../static/js/echarts-wordcloud.js"></script>
 <script src="../static/js/index.js"></script>
 </body>
 
